modify package name

--- a/Assets/com.ui.effect/package.json
+++ b/Assets/com.ui.effect/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "com.seasun.ui.effect",
+  "name": "com.ui.effect",
   "version": "0.1.0",
   "unity": "2019.3",
   "unityRelease": "0a10",
